# ECHO_modules

./: .env.example  .gitignore  DataSet.py  DataSetResults.py  Dockerfile  ECHO_modules_Tutorials.ipynb  ECHO_modules_delta_api_Tutorials.ipynb  Pipfile  README.md  README_echo_modules.md  README_echo_modules_delta.md  SBU-db.md  class.py  data_set_presets.py  docker-compose.yaml  geographies.py  get_data.py  make_data_sets.py  presets.py  pyproject.toml  pyproject.toml.setuptools  requirements.txt  startup.sh  state_cd.csv  state_counties.csv  state_postal_code_to_fips.json  test_DataSet_store.py  test_functions.py  test_make_data_sets.py  test_programs.py  tests.py  utilities.py
.github/workflows/: publish.yml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
ECHO_modules/: DataSet.py  DataSetResults.py  correct_counties.py  data_set_presets.py  geographies.py  get_data.py  make_data_sets.py  rsei_utilities.py  utilities.py
ECHO_modules/ECHO_modules.egg-info/: SOURCES.txt  top_level.txt
ECHO_modules/ECHOmodules.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ECHO_modules_delta/: DataSet.py  DataSetResults.py  geographies.py  get_data.py  make_data_sets.py  utilities.py
ECHOmodules/: __init__.py
data/: state_cd.csv  state_counties_corrected.csv  state_huc8_map.json
src/: DataSet.py
src/ECHO_modules.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: houston_zips.json  test_functions.py  test_programs.py
