[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ECHO_modules"
version = "0.1.0"
authors = [
	{name = "Steve Hansen", email = "steven.e.hansen@gmail.com"}, 
	{ name="Eric Nost", email="enost@uoguelph.ca" }, 
	{ name="Kelsey Breseman", email="ifoundthemeaningoflife@gmail.com" }, 
	{name = "EDGI", email = "contact@envirodatagov.org"}
]
readme = "README.md"
description = "Python package for analyzing the US Environmental Protection Agency's Enforcement and Compliance History Online database"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
	"folium>=0.14.0",
	"geopandas>=0.9.0",
	"ipython>=7.29.0",
	"ipywidgets>=7.6.5",
	"matplotlib>=3.4.3",
	"numpy==1.23.5",
	"pandas>=1.3.4",
	"requests>=2.31.0",
	"seaborn>=0.11.2"
]

[project.urls]
Home = "https://github.com/edgi-govdata-archiving/ECHO_modules/"
Issues = "https://github.com/edgi-govdata-archiving/ECHO_modules/issues"
